--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,15 @@
 
         </activity>
 
-        <activity android:name=".CameraActivity">
+        <activity android:name=".camera1.CameraActivity">
 
         </activity>
+
+
+        <activity android:name=".camera2.Camera2Activity">
+
+        </activity>
+
         <activity android:name=".ImageActivity" />
 
 
